<resources>
    <string name="app_name">Backendless Todo</string>
    <string name="action_settings">Settings</string>
    <string name="input_phone_hint">Input phone number</string>
    <string name="input_item_hint">Input notes</string>
    <string name="input_item_error">Notes is empty</string>
    <string name="input_item_done">is done</string>
    <string name="btn_ok">OK</string>
    <string name="menu_filter_header">Items filter</string>
    <string name="menu_filter_all">all</string>
    <string name="menu_filter_live">live</string>
    <string name="menu_filter_done">done</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_delete">Delete</string>
    <string name="edit_item_header">Input or edit todo</string>
</resources>
