<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gmail.sergii_tymofieiev.backendlesstodo.MainActivity">
    <group
        android:id="@+id/sort_type_group"
        android:checkableBehavior="single">

        <item
            android:title="@string/menu_filter_header"
            android:enabled="false"
            android:checkable="false"
            />
        <item
            android:id="@+id/filter_all"
            android:title="@string/menu_filter_all"
            />
        <item
            android:id="@+id/filter_live"
            android:title="@string/menu_filter_live"
            />
        <item
            android:id="@+id/filter_done"
            android:title="@string/menu_filter_done"
            />

    </group>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
